--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/ffacun2/tp_hospital/issues"
   },
-  "homepage": "https://github.com/ffacun2/tp_hospital#readme"
+  "homepage": "https://github.com/ffacun2/tp_hospital#readme",
+  "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3"
+  }
 }
